--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-exec": "^3.0.0",
     "grunt-open": "^0.2.4",
     "grunt-processhtml": "^0.4.2",
     "howler": "^2.0.15",
